played a bit with IconFetcher